--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,15 @@
   <package id="ControlzEx" version="4.3.2" targetFramework="net48" />
   <package id="DynamicData" version="6.16.6" targetFramework="net48" />
   <package id="Fody" version="6.2.4" targetFramework="net48" developmentDependency="true" />
+  <package id="IX.Abstractions" version="0.5.3" targetFramework="net48" />
+  <package id="IX.Abstractions.Collections" version="0.5.3" targetFramework="net48" />
+  <package id="IX.Abstractions.Threading" version="0.5.3" targetFramework="net48" />
+  <package id="IX.Observable" version="0.5.3" targetFramework="net48" />
+  <package id="IX.StandardExtensions" version="0.5.5" targetFramework="net48" />
+  <package id="IX.StandardExtensions.ComponentModel" version="0.5.3" targetFramework="net48" />
+  <package id="IX.StandardExtensions.Threading" version="0.5.3" targetFramework="net48" />
+  <package id="IX.Undoable" version="0.5.3" targetFramework="net48" />
+  <package id="JetBrains.Annotations" version="2020.1.0" targetFramework="net48" />
   <package id="MahApps.Metro" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net48" />
   <package id="PInvoke.AdvApi32" version="0.6.49" targetFramework="net48" />
@@ -13,6 +22,9 @@
   <package id="ReactiveUI.Validation" version="1.5.5" targetFramework="net48" />
   <package id="ReactiveUI.WPF" version="11.5.26" targetFramework="net48" />
   <package id="Splat" version="9.5.20" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reactive" version="4.4.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
