--- a/App.config
+++ b/App.config
@@ -9,6 +9,14 @@
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="JetBrains.Annotations" publicKeyToken="1010a0d8d6380325" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2020.1.0.0" newVersion="2020.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IX.StandardExtensions" publicKeyToken="029c2b9bf120ba32" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.5.5.0" newVersion="0.5.5.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
