--- a/packages.config
+++ b/packages.config
@@ -26,4 +26,9 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="Vanara.Core" version="3.2.14" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Cryptography" version="3.2.14" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Kernel32" version="3.2.14" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Security" version="3.2.14" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Shared" version="3.2.14" targetFramework="net48" />
 </packages>
