--- a/App.config
+++ b/App.config
@@ -17,6 +17,14 @@
         <assemblyIdentity name="IX.StandardExtensions" publicKeyToken="029c2b9bf120ba32" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.5.5.0" newVersion="0.5.5.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Vanara.PInvoke.Shared" publicKeyToken="c37e4080322237fa" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.15.0" newVersion="3.2.15.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Vanara.Core" publicKeyToken="c37e4080322237fa" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.15.0" newVersion="3.2.15.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
